web/style.css
#loading {
    z-index: 1000;
    background: #ffffff;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
}

p {
    display: inline;
}

a {
    text-decoration: none;
}

.data-card {
    margin-bottom: 2px;
}

.w3-main {
    margin-left: 205px;
}

.profile-picture {
    margin-top: 20px;
    margin-left: 17px;
    height: 50px;
    width: 50px;
    border-radius: 20%;
}

#muted-input {
    border: 0px solid;
    height: 75%;
    width: 95%;
    color: gray;
}

.pad {
    padding: 4px;
}

.nav-link {
}

footer {
    position: absolute;
    bottom: 0px;
    right: 0px;
    width: 100%;
    text-align: center;
}

